--- a/model/watering_prediction.ipynb
+++ b/model/watering_prediction.ipynb
@@ -354,6 +354,7 @@
         "path = './model.pkl'\n",
         "with open(path,\"wb\") as file:\n",
         "  pickle.dump(model,file)"
+        "# ref:https://ithelp.ithome.com.tw/articles/10230793"
       ],
       "metadata": {
         "id": "p6WT1nhhWUSD"
